feat: nfc self update
